--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Please Buy</h1>
-    <a class="button" href="https://google.com">Click</a
+    <a class="button" href="https://google.com">Click</a>
   </body>
 </html>
