enable google analytics

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="utf-8">
     <title>Hello World</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G398CRRSPS"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-G398CRRSPS');
+    </script>
+
   </head>
   <body>
     <h1>Please Buy</h1>
