--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
   </head>
   <body>
     <h1>Please Buy</h1>
-    <a class="button" href="https://google.com">Click</a>
+    <a class="button" href="https://google.com" onclick="gtag('event', 'click', {'event_category': 'button', 'event_label': 'click_success'});" >Click</a>
   </body>
 </html>
