--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G398CRRSPS"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5D3Q39J6KC"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-G398CRRSPS');
+      gtag('config', 'G-5D3Q39J6KC');
     </script>
 
   </head>
