Univarsal analytics property

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-5D3Q39J6KC');
+      gtag('config', 'G-DSEP9EZ6W1');
     </script>
 
   </head>
