add comments on gtag parameters

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </head>
   <body>
     <h1>Please Buy</h1>
+    <!-- The parameters passed are gtag('event', '<event action>', {'event_category': '<>', 'event_label': '<>'}); -->
     <a class="button" href="https://google.com" onclick="gtag('event', 'click_success', {'event_category': 'button', 'event_label': 'click_success'});" >Click</a>
   </body>
 </html>
